rajout de test pour le score qui a l'air de marcher, pas tester les cas extreme